# facenet-pytorch

./: pyproject.toml
facenet_pytorch-2.6.0.dist-info/: METADATA
facenet_pytorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
