[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facenet-pytorch"
version = "2.6.0"
description = "Pretrained Pytorch model for facenet"
authors = [
    { name = "Tim Esler", email = "tim.esler89@gmail.com" }
]
license = { file = "LICENSE.md" }
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch==2.7.1",
    "torchvision>=0.22.1,<0.23.0",
    "numpy",
    "pillow",
    "scipy",
    "requests",
    "tqdm",
]
